<resources>
    <string name="app_name">MyAppDemo</string>

    <string name="skip">跳过</string>
    <string name="open">立即体验</string>

    <string name="index_activity">导航</string>
    <string name="guide_begin">欢迎使用万年历，现在开启我们的简单介绍旅程吧，亲</string>
    <string name="guide_end">亲，旅程结束，现在去体验我们的万年历吧，希望带给您更方便、更加美好的生活 -->GO</string>
    <string name="btn_close_guide">立即体验</string>

    <!--登陆和注册 -->
    <string name="user_name">用户名:</string>
    <string name="password">密  码:</string>
    <string name="again_pw">再输一次密码:</string>
    <string name="phone">手机号:</string>
    <string name="email">邮箱:</string>
    <string name="login">登  陆</string>
    <string name="register">注  册</string>
    <string name="login_label">登陆</string>
    <string name="register_label">注册</string>
    <string name="next">下一步</string>
    <string name="verify_code">验证码:</string>

    <!--关于我们 -->
    <string name="help_label">帮助</string>
    <string name="feedback_label">反馈</string>
    <string name="download_version">正在下载新版本...</string>

    <!--设置-->
    <string name="logout">退  出</string>

    <!-- 后台 -->
    <string name="select_type">选择内容类型</string>

    <!-- 微信 -->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <string name="vedio_label">视频</string>

    <!-- 手机充值 -->
    <string name="chongzhi">手机充值</string>
    <string name="chongzhihint">请输入手机号码</string>
    <string name="chongzhihint01">充话费</string>
    <string name="chongzhibt">充值</string>
    <string name="order_id">请输入订单号</string>
    <string name="order_history">历史订单</string>
    <string name="query_order">查询订单</string>

    <!-- 收藏 -->
    <string name="empty_collect">主人，还没有收藏呢</string>

    <!-- 评论 -->
    <string name="empty_comment">主人，还没有评论呢</string>

    <!-- 应用商城 -->
    <string name="desc">在最美好的时光里遇见你\n快乐的时光\n与朋友一起分享</string>
    <string name="invitation_code">邀请好友，您将获得一张京东购物券\n您的邀请码是：</string>
    <string name="share">---------------------------------    分享到    ---------------------------------</string>

    <!-- 评论 -->
    <string name="empty_zhangdan">主人，还没有账单呢</string>

    <string name="refresh">找不到数据，点击刷新重试</string>
</resources>
