<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="guyuanjun.com.myappdemo.fragment.my.store.invitation.InvitationActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/invitation" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6dp"
        android:text="@string/desc" />

    <TextView
        android:id="@+id/invitation_code_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/invitation_code" />

    <TextView
        android:id="@+id/invitation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invitation_code_title"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="111111111111111111111111111"
        android:textColor="@color/blue" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_share"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/share" />

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weixin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fold_background"
            android:src="@drawable/weixin" />

        <ImageView
            android:id="@+id/qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/fold_background"
            android:src="@drawable/qq" />


    </LinearLayout>
</RelativeLayout>
